# EMSE-Thesis

./: .gitignore  README.md  analyze_data.py  analyze_llm_data.py  detect_foreign_words.py  detect_foreign_words_llm.py  evaluate_data.py  evaluate_data_llm.py  evaluate_words_llm.py  fetch_data.py  gui.py  litest.py  main.py  pyproject.toml
evaluation_results/flores_llm_run_gemma_cloud/: injected_detection_metrics.csv  metrics_summary.json  run_metadata.json
evaluation_results/new_flores_llm_run_deepseek_cloud/: injected_detection_metrics.csv  injected_word_predictions.jsonl  metrics_summary.json  run_metadata.json
evaluation_results/new_flores_llm_run_gemma4_cloud/: injected_detection_metrics.csv  injected_word_predictions.jsonl  metrics_summary.json  run_metadata.json
src/: analyze_methods.py  evaluate_methods.py  llm_evaluate_methods.py  prepare_data.py  train_binary_model.py
tests/: test_analyze_methods.py  test_evaluate_methods.py  test_llm_evaluate_methods.py  test_prepare_data.py
